--- a/monstyle.css
+++ b/monstyle.css
@@ -80,19 +80,17 @@
     }
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap :5px;
-  padding: 1px;
-  background-color: #f9f9f9;
-  border-radius:5px;
-}
-
-.gallery img {
-  width: 70%;
-  height:300px;
-  object-fit: cover;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  gap: 15px; /* espace entre les images */
+  padding: 5px;
+  background-color: gray;
+  }
+  .gallery img {
+  border: 0px solid red !important;
+  width: 100% !important;
+  height: 300px !important;
   border-radius: 5px;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
   transition: transform 0.3s;
 }
 
