--- a/monstyle.css
+++ b/monstyle.css
@@ -258,9 +258,15 @@
         }
 
         @media (max-width: 480px) {
-            .patri table img {
+          .photo-gallery img {
                 width: 100%;
                 height: auto;
                 
             }
+            .gallery img {
+                width: 100%;
+                height: auto;
+                
+            }
+        }
         }
